--- a/.github/workflows/build-meson.yml
+++ b/.github/workflows/build-meson.yml
@@ -32,6 +32,8 @@ jobs:
          sudo apt install -y clang
          export CC=clang
          export CXX=clang++
+         echo "CC=clang" >> $GITHUB_ENV
+         echo "CXX=clang++" >> $GITHUB_ENV
 
       - uses: BSFishy/meson-build@v1.0.1
         with:
