Try to fix meson build

--- a/.github/workflows/build-meson.yml
+++ b/.github/workflows/build-meson.yml
@@ -66,6 +66,8 @@ jobs:
       - name: QPM Restore
         run: |
           chmod +x ./QPM/qpm-rust
+          ./QPM/qpm-rust dependency add fmt
+          ./QPM/qpm-rust dependency remove paper
           ./QPM/qpm-rust restore
 
       - name: List Post Restore
