--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,10 +23,14 @@ jobs:
 
       - uses: seanmiddleditch/gha-setup-ninja@v3
 
+      - name: Setup NDK
+        id: setup-ndk
+        uses: nttld/setup-ndk@v1
+        with:
+          ndk-version: r24
+
       - name: Create ndkpath.txt
-        run: |
-          echo "$ANDROID_NDK_LATEST_HOME" > ${GITHUB_WORKSPACE}/ndkpath.txt
-          cat ${GITHUB_WORKSPACE}/ndkpath.txt
+        run: echo ${{ steps.setup-ndk.outputs.ndk-path }} > ${GITHUB_WORKSPACE}/ndkpath.txt
 
 
       - name: Get QPM
@@ -82,6 +86,10 @@ jobs:
       - name: QPM Edit Version
         run: |
           ./QPM/qpm-rust package edit --version "${{ steps.get_tag_version.outputs.VERSION }}"
+
+      - name: Setup LLD
+        run: |
+          sudo apt install lld -y
 
       - name: Build
         run: |
