--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -218,4 +218,4 @@ jobs:
           git push --tags --force
 
       - name: QPM Publish
-        run: ./QPM/qpm-rust publish
+        run: ./QPM/qpm-rust publish ${{ secrets.QPM_TOKEN }}
