Use qpm instead of qpm-rust

--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -45,8 +45,8 @@ jobs:
         
     - name: QPM Collapse
       run: |
-        chmod +x ./QPM/qpm-rust
-        ./QPM/qpm-rust collapse
+        chmod +x ./QPM/qpm
+        ./QPM/qpm collapse
 
     - name: QPM Dependencies Cache
       id: cache-qpm-deps
@@ -54,7 +54,7 @@ jobs:
       env:
         cache-name: cache-qpm-deps
       with:
-        path: /home/runner/.local/share/QPM-Rust/cache
+        path: /home/runner/.local/share/qpm/cache
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('qpm.json') }}
         restore-keys: |
           ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -63,8 +63,8 @@ jobs:
 
     - name: QPM Restore
       run: |
-        chmod +x ./QPM/qpm-rust
-        ./QPM/qpm-rust restore
+        chmod +x ./QPM/qpm
+        ./QPM/qpm restore
 
     - name: List Post Restore
       run: |
@@ -73,7 +73,7 @@ jobs:
         echo libs:
         ls -la ${GITHUB_WORKSPACE}/extern/libs
         echo cache:
-        ls -la $HOME/.local/share/QPM-Rust/cache
+        ls -la $HOME/.local/share/qpm/cache
 
     - name: Setup LLD
       run: |
@@ -83,7 +83,7 @@ jobs:
       run: |
         cd ${GITHUB_WORKSPACE}
         pwsh -Command ./build.ps1
-        ./QPM/qpm-rust qmod build
+        ./QPM/qpm qmod build
 
 
     - name: Create Qmod
