--- a/.github/workflows/build-meson.yml
+++ b/.github/workflows/build-meson.yml
@@ -47,8 +47,8 @@ jobs:
 
       - name: QPM Collapse
         run: |
-          chmod +x ./QPM/qpm-rust
-          ./QPM/qpm-rust collapse
+          chmod +x ./QPM/qpm
+          ./QPM/qpm collapse
 
       - name: QPM Dependencies Cache
         id: cache-qpm-deps
@@ -56,7 +56,7 @@ jobs:
         env:
           cache-name: cache-qpm-deps
         with:
-          path: /home/runner/.local/share/QPM-Rust/cache
+          path: /home/runner/.local/share/qpm/cache
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('qpm.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -65,10 +65,10 @@ jobs:
 
       - name: QPM Restore
         run: |
-          chmod +x ./QPM/qpm-rust
-          ./QPM/qpm-rust dependency add fmt
-          ./QPM/qpm-rust dependency remove paper
-          ./QPM/qpm-rust restore
+          chmod +x ./QPM/qpm
+          ./QPM/qpm dependency add fmt
+          ./QPM/qpm dependency remove paper
+          ./QPM/qpm restore
 
       - name: List Post Restore
         run: |
@@ -77,7 +77,7 @@ jobs:
           echo libs:
           ls -la ${GITHUB_WORKSPACE}/extern/libs
           echo cache:
-          ls -la $HOME/.local/share/QPM-Rust/cache
+          ls -la $HOME/.local/share/qpm/cache
 
       - uses: BSFishy/meson-build@v1.0.1
         with:
