--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,8 +45,8 @@ jobs:
 
       - name: QPM Collapse
         run: |
-          chmod +x ./QPM/qpm-rust
-          ./QPM/qpm-rust collapse
+          chmod +x ./QPM/qpm
+          ./QPM/qpm collapse
 
       # added the cache on the off chance the qpm.json stays the same across versions
       - name: QPM Dependencies Cache
@@ -55,7 +55,7 @@ jobs:
         env:
           cache-name: cache-qpm-deps
         with:
-          path: /home/runner/.local/share/QPM-Rust/cache
+          path: /home/runner/.local/share/qpm/cache
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('qpm.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -64,8 +64,8 @@ jobs:
 
       - name: QPM Restore
         run: |
-          chmod +x ./QPM/qpm-rust
-          ./QPM/qpm-rust restore
+          chmod +x ./QPM/qpm
+          ./QPM/qpm restore
 
       - name: List Post Restore
         run: |
@@ -74,7 +74,7 @@ jobs:
           echo libs:
           ls -la ${GITHUB_WORKSPACE}/extern/libs
           echo cache:
-          ls -la $HOME/.local/share/QPM-Rust/cache
+          ls -la $HOME/.local/share/qpm/cache
 
       - name: Get Tag Version
         id: get_tag_version
@@ -85,7 +85,7 @@ jobs:
 
       - name: QPM Edit Version
         run: |
-          ./QPM/qpm-rust package edit --version "${{ steps.get_tag_version.outputs.VERSION }}"
+          ./QPM/qpm package edit --version "${{ steps.get_tag_version.outputs.VERSION }}"
 
       - name: Setup LLD
         run: |
@@ -95,7 +95,7 @@ jobs:
         run: |
           cd ${GITHUB_WORKSPACE}
           pwsh -Command ./build.ps1
-          ./QPM/qpm-rust qmod build
+          ./QPM/qpm qmod build
 
 
       - name: Create Qmod
@@ -194,10 +194,10 @@ jobs:
 
       - name: Change QPM Package Info
         run: |
-          ./QPM/qpm-rust package edit-extra --branchName "version-${{ steps.get_tag_version.outputs.TAG }}"
-          ./QPM/qpm-rust package edit-extra --soLink "${{ steps.upload_release_asset.outputs.browser_download_url }}"
-          ./QPM/qpm-rust package edit-extra --debugSoLink "${{ steps.upload_debug_asset.outputs.browser_download_url }}"
-          ./QPM/qpm-rust package edit-extra --modLink "${{ steps.upload_qmod_asset.outputs.browser_download_url }}"
+          ./QPM/qpm package edit-extra --branchName "version-${{ steps.get_tag_version.outputs.TAG }}"
+          ./QPM/qpm package edit-extra --soLink "${{ steps.upload_release_asset.outputs.browser_download_url }}"
+          ./QPM/qpm package edit-extra --debugSoLink "${{ steps.upload_debug_asset.outputs.browser_download_url }}"
+          ./QPM/qpm package edit-extra --modLink "${{ steps.upload_qmod_asset.outputs.browser_download_url }}"
 
       - name: Commit Changed package info
         run: |
@@ -218,4 +218,4 @@ jobs:
           git push --tags --force
 
       - name: QPM Publish
-        run: ./QPM/qpm-rust publish ${{ secrets.QPM_TOKEN }}
+        run: ./QPM/qpm publish ${{ secrets.QPM_TOKEN }}
