Set quest defines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ project(${COMPILE_ID})
 # c++ standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
 # define that stores the actual source directory
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
@@ -29,7 +30,13 @@ add_compile_definitions(VERSION=\"${MOD_VERSION}\")
 #add_compile_definitions(ID=\"${MOD_ID}\")
 add_compile_definitions(MOD_ID=\"${MOD_ID}\")
 add_compile_definitions(DEBUGB=1) # disable debug logs
-add_compile_definitions(QUEST)
+if(NOT DEFINED NOT_QUEST)
+    message("Building for Quest")
+    add_compile_definitions(QUEST)
+else()
+    message("Building for Quest without Quest defines")
+endif()
+
 add_compile_definitions(FMT_HEADER_ONLY)
 
 # recursively get all src files
